# Compiling-Principles-Course

./: CMakeLists.txt  README-cn.md  ir_generator.cpp  main.cpp  object_generator.cpp  object_generator.h
resources/: 3.txt  4.txt
